# j2lint

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
.github/: dependabot.yml  license-short.txt  release_process.md
.github/workflows/: pull-request-management.yml
j2lint/: __init__.py  __main__.py  cli.py  logger.py  settings.py  utils.py
j2lint/linter/: __init__.py  collection.py  error.py  linterror.py  rule.py  runner.py  util.py  validationerror.py
j2lint/linter/indenter/: __init__.py  node.py  statement.py
j2lint/rules/: JinjaFilterHasSpaceRule.py  JinjaOperatorHasSpaceRule.py  JinjaStatementDelimeterRule.py  JinjaStatementDelimiterRule.py  JinjaStatementHasSpacesRule.py  JinjaTemplateIndentationRule.py  JinjaTemplateNoTabsRule.py  JinjaTemplateSingleStatementRule.py  JinjaTemplateSyntaxErrorRule.py  JinjaVariableHasSpaceRule.py  JinjaVariableHasSpacesRule.py  JinjaVariableNameCaseRule.py  JinjaVariableNameFormatRule.py  jinja_operator_has_space_rule.py  jinja_operator_has_spaces_rule.py  jinja_statement_delimiter_rule.py  jinja_statement_has_space_rule.py  jinja_statement_has_spaces_rule.py  jinja_template_indentation_rule.py  jinja_template_no_tabs_rule.py  jinja_template_single_statement_rule.py  jinja_template_syntax_error_rule.py  jinja_variable_has_space_rule.py  jinja_variable_name_case_rule.py  jinja_variable_name_format_rule.py
tests/: __init__.py  conftest.py  pytest.ini  test_cli.py  test_logger.py  test_rules.py  test_settings.py  test_utils.py  utils.py
tests/data/: JinjaVariableHasSpaceRule.j2  test.j2
tests/test_linter/: __init__.py  test_collection.py  test_error.py  test_rule.py  test_runner.py
tests/test_linter/data/: disable-rule-3.j2  test.j2
tests/test_linter/test_indenter/: __init__.py  test_node.py  test_statement.py
tests/test_rules/: __init__.py  test_rules.py
tests/test_rules/data/: JinjaOperatorHasSpaceRule.j2  JinjaStatementDelimeterRule.j2  JinjaStatementHasSpacesRule.j2  JinjaTemplateIndentationRule.j2  JinjaTemplateIndentationRule_fail.j2  JinjaTemplateNoTabsRule.j2  JinjaVariableNameCaseRule.j2  jinja_operator_has_spaces_rule.j2  jinja_statement_delimiter_rule.j2  jinja_statement_has_spaces_rule.j2  jinja_template_indentation_rule.IndexError.j2  jinja_template_indentation_rule.JinjaLinterError.j2  jinja_template_indentation_rule.j2  jinja_template_indentation_rule.missing_end_tag.j2  jinja_template_no_tabs_rule.j2  jinja_template_single_statement_rule.j2  jinja_template_syntax_error_rule.j2  jinja_variable_has_space_rule.j2  jinja_variable_name_case_rule.j2  jinja_variable_name_format_rule.j2
